# gmail-mcp

./: .env.example  README.md  gmail_auth.py  gmail_mcp_server.py  gmail_operations.py  main.py  pyproject.toml  test_connection.py
